# codec-harness

./: Dockerfile  README.md  environment.yml  pyproject.toml
codec_harness/: __init__.py  codec_manager.py  input_handler.py  main.py  shortcuts.py
codec_harness/codecs/: av1_svt.py  base_codec.py  dcvc_rt.py  h264_ffmpeg.py  hinerv.py
