[project]
name = "codec-harness"
version = "0.2.0"
description = "A modular, plugin-driven tool to encode videos with various codecs."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python-headless", # For input handling
]

[project.scripts]
codec-harness = "codec_harness.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codec_harness*"]